--- a/project.json
+++ b/project.json
@@ -3,6 +3,11 @@
   "description": "robot1demo\r\n",
   "main": "Main.xaml",
   "dependencies": {
+    "ActivitiesSqlToString": "[1.0.3]",
+    "BalaReva.PostgreSql.Activities": "[2.0.0]",
+    "Generate_Sql_Queries": "[2.0.0]",
+    "SQLiteDatabaseForUiPath": "[1.0.17]",
+    "UiPath.Database.Activities": "[1.3.7369.25200]",
     "UiPath.Excel.Activities": "[2.8.5]",
     "UiPath.Mail.Activities": "[1.8.5]",
     "UiPath.System.Activities": "[20.4.0]",
